Задания к уроку 5, задача 1 выполнена и проверена

--- a/05_Microservice_Organization/order-service/src/main/resources/bootstrap.yml
+++ b/05_Microservice_Organization/order-service/src/main/resources/bootstrap.yml
@@ -5,3 +5,8 @@ spring:
     name: order-service
   profiles:
     active: local
+eureka:
+  client:
+    enabled: true
+    service-url:
+      defaultZone: http://localhost:8888/eureka/
