Задания к уроку 5, задача 2, не подхватываются настройки из bootstrap.yml

--- a/05_Microservice_Organization/order-service/src/main/resources/bootstrap.yml
+++ b/05_Microservice_Organization/order-service/src/main/resources/bootstrap.yml
@@ -4,7 +4,15 @@ spring:
   application:
     name: order-service
   profiles:
-    active: local
+    active: active
+  cloud:
+    config:
+      enabled: true
+#      discovery:
+#        service-id: discovery
+      uri: http://localhost:8888
+      name: discovery
+
 eureka:
   client:
     enabled: true
