Задания к уроку 5, задача 2 выполнена, на проверку

--- a/05_Microservice_Organization/discovery/src/main/resources/application.yml
+++ b/05_Microservice_Organization/discovery/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
     config:
       server:
         native:
-          searchLocations: file:./config/
+          searchLocations: classpath:/config/
 
 
 eureka:
