--- a/05_Microservice_Organization/order-service/src/main/resources/bootstrap.yml
+++ b/05_Microservice_Organization/order-service/src/main/resources/bootstrap.yml
@@ -1,20 +1,18 @@
 server:
-  port: 0
+  port: 8088
 spring:
   application:
     name: order-service
   profiles:
-    active: active
+    active: local
   cloud:
     config:
       enabled: true
-#      discovery:
-#        service-id: discovery
-      uri: http://localhost:8888
-      name: discovery
+      discovery:
+        service-id: discovery
+        enabled: true
 
 eureka:
   client:
-    enabled: true
-    service-url:
+    serviceUrl:
       defaultZone: http://localhost:8888/eureka/
