Задания к уроку 5, задача 3 выполнена, на проверку

--- a/05_Microservice_Organization/discovery/src/main/resources/config/gateway-local.yml
+++ b/05_Microservice_Organization/discovery/src/main/resources/config/gateway-local.yml
@@ -1,6 +1,15 @@
 spring:
   application:
     name: gateway
+  cloud:
+    gateway:
+      routes:
+        - id: orders
+          uri: lb://order-service
+          predicates:
+            - Path=/skillbox/api/order/**
+          filters:
+            - RewritePath=/skillbox(?<segment>/?.*), $\{segment}
 management:
   endpoints:
     web:
